--- a/PlannedOrderApp/ApplicationController/public_html/resources/css/rmsStyles.css
+++ b/PlannedOrderApp/ApplicationController/public_html/resources/css/rmsStyles.css
@@ -47,6 +47,7 @@
     font-family: xxRobotoLight !important;
     font-size: 13px !important;
     color: #999999 !important;
+    font-weight: bold;
 }
 
 .xxRobotoGroupHeader {
